--- a/core/templates/Lista_Clientes.html
+++ b/core/templates/Lista_Clientes.html
@@ -3,31 +3,38 @@
     <head>
         <meta charset="UTF-8">
         <title>Clientes</title>
+        {%load static%}
+        <link rel="stylesheet" href="static/inicial.css">
+
     </head>
     <body>
-        <h4>Teste</h4>
-        <table style="width:50%" align="right" border="1">
-            <tr>
-                <th>NOME DO CLIENTE</th>
-                <th>TELEFONE</th>
-                <th>RG_CLIENTE</th>
-                <th>ENDEREÇO</th>
-            </tr>
-            {% for cliente in clientes %}
-            <tr>
-                <td>{{cliente.nome_cliente}}</td>
-                <td>{{cliente.telefone_cliente}}</td>
-                <td>{{cliente.rg_cliente}}</td>
-                <td>{{cliente.endereco_cliente}}</td>
-            </tr>
-            {%endfor%}
-        </table>
+        <div id="listagem">
+            <a href="{% url 'tela_inicial'%}">Tela Inicial</a></li>
+            <h4 align="center">Cadastro e Listagem de Clientes</h4>
+            <table style="width:50%" align="right" border="1">
+                <tr>
+                    <th>NOME DO CLIENTE</th>
+                    <th>TELEFONE</th>
+                    <th>RG_CLIENTE</th>
+                    <th>ENDEREÇO</th>
+                </tr>
+                {% for cliente in clientes %}
+                <tr>
+                    <td>{{cliente.nome_cliente}}</td>
+                    <td>{{cliente.telefone_cliente}}</td>
+                    <td>{{cliente.rg_cliente}}</td>
+                    <td>{{cliente.endereco_cliente}}</td>
+                </tr>
+                {%endfor%}
+            </table>
+        </div>
+
         <form  action="{%url 'salva_clientes'%}" method="POST">
             {% csrf_token%}
-            <p><label>Nome do Cliente:</label><input placeholder="Nome completo" maxlength="40" type="text" name="nome_cliente"></p>
-            <p><label>Nome do Cliente:</label><input placeholder="Rg cliente" maxlength="7" type="text" name="rg_cliente"></p>
-            <p><label>Nome do Cliente:</label><input placeholder="Tel p/ contato" type="text"  maxlength="11" name="telefone_cliente"></p>
-            <p><label>Nome do Cliente:</label><textarea placeholder="Endereço completo" type="text" name="endereco_cliente"></textarea></p>
+            <p><label for="01" class="alinha_cliente">Nome do Cliente:</label><input id="01" placeholder="Nome completo" maxlength="40" size="50" type="text" name="nome_cliente"></p>
+            <p><label for="02" class="alinha_cliente">Rg do Cliente:</label><input id="02" placeholder="Rg cliente" maxlength="7" size="50" type="text" name="rg_cliente"></p>
+            <p><label for="03" class="alinha_cliente">Tel do Cliente:</label><input id="03" placeholder="Tel p/ contato" type="text"  maxlength="11" size="50" name="telefone_cliente"></p>
+            <p><label for="04" class="alinha_cliente">Endereço do Cliente:</label><textarea id="04" placeholder="Endereço completo" type="text" name="endereco_cliente"></textarea></p>
 
             <button type="submit">Cadastrar</button>
         </form>
