--- a/core/templates/Lista_Itens.html
+++ b/core/templates/Lista_Itens.html
@@ -4,29 +4,30 @@
         <meta charset="UTF-8">
         <title>Floricultura-Itens-Venda</title>
         {%load static%}
+        <link rel="stylesheet" href="static/inicial.css">
     </head>
     <body>
-        <h3>Itens das Vendas</h3>
+        <a href="{% url 'tela_inicial'%}">Tela Inicial</a>
+        <h4>Itens das Vendas</h4>
         <table style="width:50%" align="right" border="1">
             <tr>
                 <th>CÓDIGO PRODUTO</th>
                 <th>CÓDIGO VENDA</th>
                 <th>QNT. PRODUTO</th>
             </tr>
-            {% for itens in ItensV%}
+            {% for itens in ItensV %}
             <tr>
                 <td>{{itens.cod_produto}}</td>
-                <td>{{itens.cod_venda}}</td>
+                <td>{{itens.qnt_produto}}</td>
                 <td>{{itens.qnt_produto}}</td>
             </tr>
             {%endfor%}
         </table>
-
         <form action="{% url 'inserir_produto' %}" method="POST">
             {% csrf_token%}
-            <p><label>Código Produto:</label><input type="type" name="cod_produto"></p>
-            <p><label>Código Venda:</label><input type="type" name="cod_venda"></p>
-            <p><label>Quantidade Produto:</label><input type="type" name="qnt_produto"></p>
+            <p><label class="alinha_cliente">Código Produto:</label><input type="text" placeholder="Código Produto"  name="cod_produto"></p>
+            <p><label class="alinha_cliente">Código Venda:</label><input type="text" placeholder="Código da Venda" name="cod_venda"></p>
+            <p><label class="alinha_cliente">Quantidade Produto:</label><input type="text" placeholder="Quantidade de Produto"  name="qnt_produto"></p>
             <button type="submit">Inserir Item</button>
         </form>
     </body>
