--- a/core/templates/cadastro_produto.html
+++ b/core/templates/cadastro_produto.html
@@ -3,34 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Cadastro de Produtos</title>
-
+    {%load static%}
+    <link rel="stylesheet" href="static/inicial.css">
 </head>
-<h2>Cadastro de Produtos</h2>
-<table style="width:50%" align="right" border="thin">
-  <tr>
-        <th>NOME DO PRODUTO</th>
-        <th>VAL. PRODUTO</th>
-        <th>QUANT. ESTOQUE</th>
-  </tr>
-    {%for produto in produtos%}
-  <tr>
-      <td>{{produto.nome_produto}}</td>
-      <td>{{produto.valor_produto}}</td>
-      <td>{{produto.qnt_estoque}}</td>
-  </tr>
-     {%endfor%}
+    <body>
+        <a href="{% url 'tela_inicial'%}">Tela Inicial</a>
+        <h4 align="center">Cadastro de Produtos</h4>
+        <table style="width:50%" align="right" border="thin">
+            <tr>
+                <th>NOME DO PRODUTO</th>
+                <th>VAL. PRODUTO</th>
+                <th>QUANT. ESTOQUE</th>
+            </tr>
+            {%for produto in produtos%}
+            <tr>
+                <td>{{produto.nome_produto}}</td>
+                <td>{{produto.valor_produto}}</td>
+                <td>{{produto.qnt_estoque}}</td>
+            </tr>
+            {%endfor%}
 
-</table>
+        </table>
 
-<form action="{%url 'salvar_produto'%}" method="POST">
-    {% csrf_token%}
+        <form action="{%url 'salvar_produto'%}" method="POST">
+            {% csrf_token%}
 
-    <p><label>Nome do Produto:</label><input placeholder="nome do produto" type="text" name="nome_produto"></p>
-    <p><label>Valor do Produto:</label><input type="text" name="valor_produto"></p>
-    <p><label>Quantidade do Produto:</label><input type="text" name="qnt_estoque"></p>
+            <p><label for="01" class="alinha_cliente">Nome do Produto:</label><input id="01" placeholder="nome do produto" size="40" type="text" name="nome_produto"></p>
+            <p><label for="02" class="alinha_cliente">Valor do Produto:</label><input id="02" placeholder="valor produto" size="40" type="text" name="valor_produto"></p>
+            <p><label for="03" class="alinha_cliente">Quantidade do Produto:</label><input id="03" placeholder="quantidade de produto" size="40" type="text" name="qnt_estoque"></p>
 
-    <button type="submit">Cadastrar</button>
-</form>
+            <button type="submit">Cadastrar</button>
+        </form>
 
-</body>
+    </body>
 </html>
