--- a/core/templates/cadastro_produto.html
+++ b/core/templates/cadastro_produto.html
@@ -15,7 +15,7 @@
                 <th>VAL. PRODUTO</th>
                 <th>QUANT. ESTOQUE</th>
             </tr>
-            {%for produto in produtos%}
+            {%for produtos in produto%}
             <tr>
                 <td>{{produto.nome_produto}}</td>
                 <td>{{produto.valor_produto}}</td>
