--- a/core/templates/Lista_Clientes.html
+++ b/core/templates/Lista_Clientes.html
@@ -8,8 +8,7 @@
 
     </head>
     <body>
-        <div id="listagem">
-            <a href="{% url 'tela_inicial'%}">Tela Inicial</a></li>
+            <a href="{% url 'tela_inicial'%}">Tela Inicial</a>
             <h4 align="center">Cadastro e Listagem de Clientes</h4>
             <table style="width:50%" align="right" border="1">
                 <tr>
@@ -18,7 +17,7 @@
                     <th>RG_CLIENTE</th>
                     <th>ENDEREÇO</th>
                 </tr>
-                {% for cliente in clientes %}
+                {% for clientes in cliente %}
                 <tr>
                     <td>{{cliente.nome_cliente}}</td>
                     <td>{{cliente.telefone_cliente}}</td>
@@ -27,7 +26,6 @@
                 </tr>
                 {%endfor%}
             </table>
-        </div>
 
         <form  action="{%url 'salva_clientes'%}" method="POST">
             {% csrf_token%}
